--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsqr": "^1.4.0",
     "next": "15.1.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
